fixing button alignment in css

--- a/style/main.css
+++ b/style/main.css
@@ -18,15 +18,13 @@ body {
   width: 600px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   height: 800px;
+  padding-bottom: 50px;
 }
 
 .btn-wrapper {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   column-gap: 5px;
-  position: fixed;
-  bottom: 360px;
 }
 
 .btn {
